@@ -4543,6 +4543,7 @@ theorems :=
 "REAL_LE_NEGR",REAL_LE_NEGR;
 "REAL_LE_NEGTOTAL",REAL_LE_NEGTOTAL;
 "REAL_LE_POW2",REAL_LE_POW2;
+"REAL_LE_POW_2",REAL_LE_POW_2;  
 "REAL_LE_RADD",REAL_LE_RADD;
 "REAL_LE_RCANCEL_IMP",REAL_LE_RCANCEL_IMP;
 "REAL_LE_RDIV_EQ",REAL_LE_RDIV_EQ;
